<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jobcontrol</string>

    <!-- Launch_Screen -->
    <string name="login_text">Jobcontrol</string>
    <string name="action_info">Info</string>
    <string name="login_name">Login-Name</string>
    <string name="login_pass">Passwort!</string>
    <string name="login_button">Login!</string>
    <string name="title_activity_menu">menu</string>


    <!-- Action_Bar -->
    <string name="navigation_drawer_open">Menü öffnen</string>
    <string name="navigation_drawer_close">Menü schließen</string>
    <string name="action_example">Test</string>
    <string name="action_search">Suche</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Ausloggen</string>



    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Meine Tickets</item>
        <item>Offline Modus</item>
        <item>Gerät suchen</item>
        <item>Arbeitsschein erstellen</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->

    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_info</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_search</item>
        <item>@mipmap/ic_action_schein</item>
    </array>


    <string-array name="status_array">
        <item>Unbearbeitet</item>   <!-- 0  -->
        <item>Fahrt</item>          <!-- 1  -->
        <item>In Arbeit</item>      <!-- 2  -->
        <item>offen</item>          <!-- 3  -->

        <item>Erledigt</item>       <!-- 4  -->
        <item>wartet</item>         <!-- 5  -->
        <item>Ware bestellt</item>  <!-- 6  -->
        <item>Ware da</item>        <!-- 7  -->
        <item>Ware benötigt</item>  <!-- 8  -->
        <item>installiert</item>    <!-- 9 -->
        <item>Eskalation</item>       <!-- 10 -->
    </string-array>
    <string-array name="status_array_eskalation">
        <item>Eskalation</item>   <!-- 0  -->
        <item>Eskalation in arbeit</item>          <!-- 1  -->
        <item>Eskalation erledigt</item>      <!-- 2  -->
    </string-array>

    <!-- Lohnart -->

    <string-array name="arry_lohnart">
        <item>Techniker</item>   <!-- 0  -->
        <item>SoftwareTechniker</item>          <!-- 1  -->
        <item>Solutionspezialist</item>      <!-- 2  -->
    </string-array>

    <!-- Notificcations -->
    <string name="collapsed">Neues Ticket!</string>
    <string name="custom_notification">Neues Ticket!</string>
    <string name="custom_notification_newtemin">Neuer Termin!!!</string>
    <string name="custom_notification_newstatus">Ware Da!</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_slidermenu">Menü</string>
    <string name="action_settings">Settings</string>
    <string name="loading">loading…</string>
    <string name="keeplogin">Angemeldet bleiben?</string>
    <string name="title_activity_ticket_details">TicketDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- URLS -->
    <string name="url_artstamm">http://5.158.136.15/job/android/db/artstamm.csv</string>
    <string name="url_dbfunctions">https://hoell.syno-ds.de:55443/job/android/test/index.php</string>



    <!-- Content Ticket_Details -->
    <string name="firma">Firma</string>
    <string name="adresse">Adresse</string>
    <string name="standort">Standort</string>
    <string name="gerät">Gerät</string>
    <string name="seriennummer">Seriennummer</string>
    <string name="störung">Störung</string>
    <string name="ansprechpartner">Ansprechpartner</string>
    <string name="telefonnummer">Telefonnummer</string>
    <string name="termin">Termin</string>
    <string name="annahme">Annahme durch</string>
    <string name="button_map">Maps</string>
    <string name="button_save">Speichern</string>
    <string name="auftragsnr">AuftragsNr</string>
    <string name="wvnr">Wartungs Vertrags Typ</string>
    <string name="angenommen">Angenommen am</string>
    <string name="button_his">Historie</string>
    <string name="title_activity_historie">Historie</string>
    <string name="button_next">Weitere 15 Einträge laden</string>
    <string name="title_activity_rueckmeldung">Rückmeldung</string>
    <string name="rueckmeldung">Rückmeldung</string>
    <string name="info_hint">Info für TEL</string>
    <string name="info">Info</string>
    <string name="button_saverueck">Senden!</string>
    <string name="ansprechpartner_hint">Ansprechpartner</string>
    <string name="rueckmeldung_caps">RÜCKMELDUNG</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_new_info">NewInfo</string>
    <string name="button_eskalation">Eskalation</string>
    <string name="eskalation_caps">ESKALATION</string>
    <string name="title_activity_eskalation">Eskalation</string>
    <string name="fleet">Fleet</string>
    <string name="switch_verfuegbar_text">Verfügbar</string>
    <string name="oeffnung">Öffnungszeiten</string>
    <string name="button_pdf">PDF</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_string">isLEER</string>
    <string name="button_nextimg">Next</string>
    <string name="widget_name">Jobcontrol ALPHA</string>
    <string name="title_activity_arbeitsschein">Arbeitsschein</string>
    <string name="test_text">TEST</string>
    <string name="anschrift">Host Höll GmbH \n Huberstusstraße 15 \n 77815 Bühl</string>
    <string name="ger">021014671 BizhubC207</string>
    <string name="sw">11234</string>
    <string name="farb">4321</string>
    <string name="zaehler">zähler</string>
    <string name="bemerkung">Bemerkung</string>
    <string name="getarbeit">Ausgeführte Arbeit</string>
    <string name="posaendern">Position ändern</string>
    <string name="zaehpruefen">Bitte Zähler prüfen</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="geterror">Beauftragte Dienstleistung</string>
    <string name="dropScheinDB">DROP ScheinDB</string>


</resources>
