<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:id="@+id/layout_start">

    <TextView
        android:text="@string/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="false"
        android:textSize="40dp"
        android:id="@+id/login_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/login_name"
        android:ems="10"
        android:id="@+id/login_name"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/login_text"
        android:layout_alignRight="@+id/login_text"
        android:layout_alignEnd="@+id/login_text"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_pass"
        android:ems="10"
        android:id="@+id/login_pass"
        android:layout_toStartOf="@+id/button"
        android:layout_marginTop="97dp"
        android:layout_below="@+id/login_text"
        android:layout_alignRight="@+id/login_text"
        android:layout_alignEnd="@+id/login_text" />






    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/button"
        android:onClick="sendLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/login_text"
        android:layout_alignStart="@+id/login_text"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="28dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keeplogin"
        android:id="@+id/checkBox"
        android:checked="true"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/login_text"
        android:layout_alignStart="@+id/login_text" />

</RelativeLayout>
