<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableLayout
                tools:context="de.hoell.jobcontrol.ticketlist.DetailsFragment"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tableLayout"
                android:layout_marginTop="0dip" >

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/firma"
                        android:id="@+id/textView"
                        android:textStyle="normal|bold" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_text"
                        android:id="@+id/textViewRueckFirma"

                        android:layout_column="0"
                        android:textColor="#383838" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gerät"
                        android:id="@+id/textView6"
                        android:textStyle="normal|bold" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_text"
                        android:id="@+id/textViewRueckModel"
                        android:enabled="false"
                        android:layout_column="0"
                        android:textColor="#383838" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/störung"
                        android:id="@+id/textView10"
                        android:textStyle="normal|bold" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_text"
                        android:id="@+id/textViewRueckStoerung"
                        android:enabled="false"
                        android:layout_column="0"
                        android:textColor="#383838" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ansprechpartner"
                        android:id="@+id/textView12"
                        android:textStyle="normal|bold" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_text"
                        android:id="@+id/textViewRueckAnsprech"
                        android:enabled="false"
                        android:layout_column="0"
                        android:textColor="#383838" />
                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/rueckmeldung_caps"
                android:id="@+id/Rueckmeldung"
                android:layout_gravity="center_horizontal" />

            <TableLayout
                tools:context="de.hoell.jobcontrol.ticketlist.DetailsFragment"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/table_rueck"
                android:layout_marginTop="0dip" >

                <TableRow
                    android:id="@+id/Ansprechpartner_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ansprechpartner"
                        android:id="@+id/Text_View_Ansprechpartner"
                        android:textStyle="normal|bold"
                        android:textSize="22dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/ansprechpartner_hint"
                        android:ems="20"
                        android:id="@+id/Ansprechpartner_Content"
                        android:layout_marginTop="27dp"
                        />

                </TableRow>

                <TableRow
                    android:id="@+id/Info_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:id="@+id/Text_View_Info"
                        android:textStyle="normal|bold"
                        android:textSize="22dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/Info_Content_row">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:hint="@string/info_hint"
                        android:ems="20"
                        android:id="@+id/Info_Content"
                        android:layout_marginTop="27dp"
                       />

                </TableRow>

            </TableLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_saverueck"
                android:id="@+id/button_save_rueck"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
